[package]
name = "bevy_picking_ui"
version = "0.18.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }
bevy_render = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }
bevy_window = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }
bevy_ui = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy.git",branch="main", default-features = false }

# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core", version = "0.18" }
